--- a/myapex.ini
+++ b/myapex.ini
@@ -12,6 +12,8 @@ AIMBOT_TRIGGER                      0x0000          #See "key_codes.txt" for the
 AIMBOT_SMOOTHING                    300             #The higher the smoother. Range is 1 to 999999. Recommended no lower than 100
 AIMBOT_ACTIVATION_FOV               5               #How far away from the cross-hairs the aimbot will activate. Range is 0.01 to 180.00
 AIMBOT_MAX_RANGE                    40              #The max range the aimbot will work at. The units are meters.
+AIMBOT_PITCH_DEADZONE               1               #pitch deadzone
+AIMBOT_YAW_DEADZONE                 1               #yaw eadzone
 
 ##############################################################################################################################################
 ### NORECOIL SETTINGS
