--- a/myapex.ini
+++ b/myapex.ini
@@ -13,7 +13,7 @@ AIMBOT_SMOOTHING                    300             #The higher the smoother. Ra
 AIMBOT_ACTIVATION_FOV               5               #How far away from the cross-hairs the aimbot will activate. Range is 0.01 to 180.00
 AIMBOT_MAX_RANGE                    40              #The max range the aimbot will work at. The units are meters.
 AIMBOT_PITCH_DEADZONE               1               #pitch deadzone
-AIMBOT_YAW_DEADZONE                 1               #yaw eadzone
+AIMBOT_YAW_DEADZONE                 1               #yaw deadzone
 
 ##############################################################################################################################################
 ### NORECOIL SETTINGS
