--- a/myapex.ini
+++ b/myapex.ini
@@ -4,6 +4,7 @@
 FEATURE_AIMBOT_ON                   false           #true or false
 FEATURE_NORECOIL_ON                 true            #true or false
 FEATURE_SENSE_ON                    true            #true or false
+FEATURE_FARMING_ON                  true            #true or false
 
 ##############################################################################################################################################
 ### AIMBOT SETTINGS
