--- a/myapex.ini
+++ b/myapex.ini
@@ -2,9 +2,9 @@
 #### FEATURES ENABLE/DISABLE
 ##############################################################################################################################################
 FEATURE_AIMBOT_ON                   false           #true or false
-FEATURE_NORECOIL_ON                 false           #true or false
-FEATURE_SENSE_ON                    false            #true or false
-FEATURE_FARMING_ON                  true            #true or false
+FEATURE_NORECOIL_ON                 true            #true or false
+FEATURE_SENSE_ON                    true            #true or false
+FEATURE_FARMING_ON                  false            #true or false
 
 ##############################################################################################################################################
 ### AIMBOT SETTINGS
