--- a/myapex.ini
+++ b/myapex.ini
@@ -3,8 +3,8 @@
 ##############################################################################################################################################
 FEATURE_AIMBOT_ON                   false           #true or false
 FEATURE_NORECOIL_ON                 true            #true or false
-FEATURE_SENSE_ON                    true          #true or false
-FEATURE_FARMING_ON                  true         #true or false
+FEATURE_SENSE_ON                    false          #true or false
+FEATURE_FARMING_ON                  false         #true or false
 
 ##############################################################################################################################################
 ### AIMBOT SETTINGS
