--- a/myapex.ini
+++ b/myapex.ini
@@ -5,6 +5,7 @@ FEATURE_AIMBOT_ON                   true           #true or false
 FEATURE_NORECOIL_ON                 true            #true or false
 FEATURE_SENSE_ON                    true          #true or false
 FEATURE_FARMING_ON                  false        #true or false
+FEATURE_GUNRUN_ON                   false        #true or false
 
 ##############################################################################################################################################
 ### AIMBOT SETTINGS
